[gd_scene load_steps=7 format=3 uid="uid://bpqp74j02xmp4"]

[ext_resource type="Script" path="res://scenes/entities/level/level_chunk.gd" id="1_htlfu"]
[ext_resource type="Resource" uid="uid://cfpb6ylo77a0h" path="res://resources/levels/level_chunk_0.tres" id="2_rbw8n"]
[ext_resource type="Script" path="res://scenes/entities/level/level_chunk_spawner.gd" id="3_k7uiv"]
[ext_resource type="Resource" uid="uid://byd1tsyiwmv5h" path="res://resources/spawners/block_spawner_0.tres" id="4_kbwhp"]
[ext_resource type="Resource" uid="uid://d1pt1oc16te24" path="res://resources/spawners/block_spawner_0_c.tres" id="5_t4cgh"]
[ext_resource type="Resource" uid="uid://crpk0jhhq6lew" path="res://resources/spawners/item_spawner_panacat.tres" id="6_13s64"]

[node name="LevelChunk" type="Node2D"]
script = ExtResource("1_htlfu")
config = ExtResource("2_rbw8n")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
unique_name_in_owner = true
rect = Rect2(0, 0, 336, 180)

[node name="EditorHintRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="LeftLevel" type="ColorRect" parent="EditorHintRoot"]
offset_left = -8.0
offset_top = 64.0
offset_right = 24.0
offset_bottom = 72.0
color = Color(1, 0, 1, 0.196078)

[node name="RightLevel" type="ColorRect" parent="EditorHintRoot"]
offset_left = 320.0
offset_top = 64.0
offset_right = 352.0
offset_bottom = 72.0
color = Color(1, 0, 1, 0.196078)

[node name="SpawnersRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="LevelChunkSpawner2" type="Node2D" parent="SpawnersRoot"]
position = Vector2(0, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("4_kbwhp")

[node name="LevelChunkSpawner3" type="Node2D" parent="SpawnersRoot"]
position = Vector2(48, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("4_kbwhp")

[node name="LevelChunkSpawner7" type="Node2D" parent="SpawnersRoot"]
position = Vector2(96, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("4_kbwhp")

[node name="LevelChunkSpawner8" type="Node2D" parent="SpawnersRoot"]
position = Vector2(192, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("5_t4cgh")

[node name="LevelChunkSpawner9" type="Node2D" parent="SpawnersRoot"]
position = Vector2(240, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("4_kbwhp")

[node name="LevelChunkSpawner10" type="Node2D" parent="SpawnersRoot"]
position = Vector2(272, 72)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("4_kbwhp")

[node name="LevelChunkSpawner11" type="Node2D" parent="SpawnersRoot"]
position = Vector2(168, 8)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("6_13s64")

[node name="LevelChunkSpawner12" type="Node2D" parent="SpawnersRoot"]
position = Vector2(192, 16)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("6_13s64")

[node name="LevelChunkSpawner13" type="Node2D" parent="SpawnersRoot"]
position = Vector2(144, 16)
script = ExtResource("3_k7uiv")
spawner_config = ExtResource("6_13s64")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="on_screen_exited"]
[connection signal="body_entered" from="SpawnersRoot/LevelChunkSpawner11/Item" to="SpawnersRoot/LevelChunkSpawner11/Item" method="collect"]
[connection signal="body_entered" from="SpawnersRoot/LevelChunkSpawner12/Item" to="SpawnersRoot/LevelChunkSpawner12/Item" method="collect"]
[connection signal="body_entered" from="SpawnersRoot/LevelChunkSpawner13/Item" to="SpawnersRoot/LevelChunkSpawner13/Item" method="collect"]
